--- a/DataStructure/DataStructure.csproj
+++ b/DataStructure/DataStructure.csproj
@@ -44,8 +44,12 @@
   <ItemGroup>
     <Compile Include="DoublyLinkedList.cs" />
     <Compile Include="LinkedList.cs" />
+    <Compile Include="Node.cs" />
+    <Compile Include="PriorityQueue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queue.cs" />
+    <Compile Include="Stack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
