added bubble sort

--- a/CSPlayground/CSPlayground.csproj
+++ b/CSPlayground/CSPlayground.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BubbleSort.cs" />
     <Compile Include="PalindromChecker.cs" />
     <Compile Include="ParenthesisChecker.cs" />
     <Compile Include="PostfixCalculator.cs" />
